--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: OdbDesign ODB++ Parser
-description: REST API and C++ library for parsing ODB++ Design archives 
+description: REST API and C++ library for parsing ODB++ Design archives
+show_downloads: true
