--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -232,7 +232,7 @@ jobs:
                       owner: context.repo.owner,
                       repo: context.repo.repo,
                       release_id: createResponse.data.id,        
-                      label: os + " Binaries",
+                      //label: os + " Binaries",
                       name: filename,            
                       data: require('fs').readFileSync(filePath),
                       headers: {
