--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -220,13 +220,12 @@ jobs:
           script: |
             try {             
               const createResponse = await github.rest.repos.createRelease({
-                draft: false,
                 generate_release_notes: true,
                 name: process.env.RELEASE_NAME,
                 owner: context.repo.owner,
-                prerelease: false,
                 repo: context.repo.repo,
                 tag_name: process.env.RELEASE_TAG,
+                target_commitish: ${{ github.ref_name }}
               });
           
               const filenames = ["OdbDesign-Linux-x64.zip", "OdbDesign-Windows-x64.zip", "OdbDesign-MacOS-x64.zip"];    
@@ -237,7 +236,6 @@ jobs:
                       owner: context.repo.owner,
                       repo: context.repo.repo,
                       release_id: createResponse.data.id,        
-                      //label: os + " Binaries",
                       name: filename,            
                       data: require('fs').readFileSync(filePath),
                       headers: {
