--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -225,17 +225,17 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 tag_name: process.env.RELEASE_TAG,
-                target_commitish: ${{ github.ref_name }}
+                target_commitish: '${{ github.ref_name }}'
               });
           
               const filenames = [ 
-                  "OdbDesign-Linux-x64.zip",
-                  "OdbDesign-Windows-x64.zip",
-                  "OdbDesign-MacOS-x64.zip"
+                  'OdbDesign-Linux-x64.zip',
+                  'OdbDesign-Windows-x64.zip',
+                  'OdbDesign-MacOS-x64.zip'
               ];
               
               for (const filename of filenames) {                  
-                  const artifactsPath = "artifacts";
+                  const artifactsPath = 'artifacts';
                   const filePath = artifactsPath +'/' + filename;
                   const uploadResponse = await github.rest.repos.uploadReleaseAsset({
                       owner: context.repo.owner,
