ignore doxygen generated docs directory

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,4 @@ build/
 ssl/
 Testing/Temporary/
 artifacts/
-/.github/workflows/create-release.js
-/scripts/compress-artifacts.ps1
-/scripts/compress-artifacts.sh
+doxygen/docs/
