--- a/Dockerfile_OdbDesignServer
+++ b/Dockerfile_OdbDesignServer
@@ -21,7 +21,7 @@ RUN apt-get update && \
         tar  \
         pkg-config \
         mono-complete \      
-         && \
+        && \
     rm -rf /var/lib/apt/lists/*
 
 # install vcpkg
@@ -68,8 +68,8 @@ RUN cmake --build --preset linux-release
 # much smaller runtime image
 FROM debian:bookworm-20231009-slim AS run
 LABEL org.opencontainers.image.source=https://github.com/nam20485/OdbDesign
-LABEL org.opencontainers.image.authors="https://github.com/nam20485"
-LABEL org.opencontainers.image.description = "The OdbDesign Docker image runs the OdbDesignServer REST API server executable, listening on port 8888."
+LABEL org.opencontainers.image.authors=https://github.com/nam20485
+LABEL org.opencontainers.image.description="The OdbDesign Docker image runs the OdbDesignServer REST API server executable, listening on port 8888."
 LABEL org.opencontainers.image.licenses=MIT
 EXPOSE 8888
 
