disable showing source download buttons in docs site

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,4 +4,4 @@ plugins:
 
 title: OdbDesign ODB++ Parser
 description: REST API and C++ library for parsing ODB++ Design archives
-show_downloads: true
+show_downloads: false
