--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,7 +50,7 @@ jobs:
       uses: github/codeql-action/init@49abf0ba24d0b7953cb586944e918a0b92074c80 # v2.22.4
       with:        
         languages: ${{ matrix.language }}
-        config-file: ${{ github.workspace }}/.github/codeql/codeql-config.yml        
+        config-file: ${{ github.workspace }}/.github/codeql-config.yml        
 
     - name: Install vcpkg
       run: |               
