--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "development", "main", "release" ]  
 
 permissions:
-  contents: write  
+  contents: read  
 
 env:
   VCPKG_ROOT: ${{ github.workspace }}/vcpkg
@@ -23,6 +23,8 @@ jobs:
   build:
     name: CMake-Multi-Platform-Build
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
@@ -179,6 +181,10 @@ jobs:
         name: ${{ matrix.os }}-artifacts
         path: ${{ env.ARTIFACTS_DIR }}/artifacts-${{matrix.os}}.zip
         retention-days: 1
+
+  #
+  # Create Release job
+  #
 
   release:
     # only on pushes to the release branch
