--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -19,7 +19,7 @@ env:
   #VCPKG_BINARY_SOURCES: 'clear;nuget,GitHub,readwrite'
   # Use `latest` as the tag to compare to if empty, assuming that it's already pushed
   COMPARE_TAG: latest
-  DOCKERFILE: Dockerfile_OdbDesignServer
+  DOCKERFILE: Dockerfile
 
 permissions:
   contents: read
