use default query suite in CodeQL by not specifying queries.uses key

--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -12,7 +12,8 @@ paths:
 #  - /home/runner/work/OdbDesign/OdbDesign/vcpkg/**/*
 #  - /home/runner/work/OdbDesign/OdbDesign/out/build/linux-release/vcpkg_installed/**/*
 
-queries:
-  - uses: security
+#queries:
+#  - uses: security
   #- uses: security-and-quality
   #- security-experimental
+  #- security-extended
