--- a/Dockerfile (exe)
+++ b/Dockerfile (exe)
@@ -1,4 +1,4 @@
-FROM debian:bookworm-20230522-slim AS build
+FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd AS build
 
 # install dependencies
 RUN apt-get update && \
@@ -52,7 +52,7 @@ RUN cp /src/OdbDesign/out/build/linux-release/OdbDesignLib/libOdbDesign.so ./_Py
 #RUN python3 -m build
 
 # much smaller runtime image
-FROM debian:bookworm-20230522-slim AS run
+FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd AS run
 
 RUN mkdir /OdbDesign
 WORKDIR /OdbDesign
