--- a/Dockerfile_PyOdbDesignServer
+++ b/Dockerfile_PyOdbDesignServer
@@ -1,5 +1,5 @@
 #FROM debian:bookworm-20230522-slim AS build
-FROM debian:bookworm-20230522-slim AS build
+FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd AS build
 
 # install dependencies
 RUN apt-get update && \
@@ -45,7 +45,7 @@ RUN cmake --build --preset python-linux-release
 
 # much smaller runtime image
 #FROM python:3.11.4-bullseye AS run
-FROM debian:bookworm-20230522-slim as run
+FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd as run
 
 # copy PyPyPyOdbDesignServer files
 COPY --from=build /src/OdbDesign/PyOdbDesignServer PyOdbDesignServer
