--- a/Dockerfile_PyOdbDesignServer
+++ b/Dockerfile_PyOdbDesignServer
@@ -1,4 +1,3 @@
-#FROM debian:bookworm-20230522-slim AS build
 FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd AS build
 
 # install dependencies
@@ -60,7 +59,8 @@ RUN apt-get update && \
         python3-dev \
         python3-pip
 
-RUN python3 -m pip install -r /PyOdbDesignServer/requirements.txt --break-system-packages
+WORKDIR /PyOdbDesignServer
+RUN python3 -m pip install -r requirements.txt --break-system-packages
 
 # run
 WORKDIR /PyOdbDesignServer
