--- a/Dockerfile_PyOdbDesignServer
+++ b/Dockerfile_PyOdbDesignServer
@@ -42,27 +42,27 @@ RUN ./scripts/generate-python-module.sh
 RUN cmake --preset python-linux-release
 RUN cmake --build --preset python-linux-release
 
-# much smaller runtime image
-#FROM python:3.11.4-bullseye AS run
-FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd as run
+# # much smaller runtime image
+# #FROM python:3.11.4-bullseye AS run
+# FROM debian:bookworm-20231009-slim@sha256:b55e2651b71408015f8068dd74e1d04404a8fa607dd2cfe284b4824c11f4d9bd as run
 
-# copy PyPyPyOdbDesignServer files
-COPY --from=build /src/OdbDesign/PyOdbDesignServer PyOdbDesignServer
+# # copy PyPyPyOdbDesignServer files
+# COPY --from=build /src/OdbDesign/PyOdbDesignServer PyOdbDesignServer
 
-# copy PyOdbDesignLib files
-COPY --from=build /src/OdbDesign/out/build/python-linux-release/OdbDesignLib/_PyOdbDesignLib.so /PyOdbDesignServer/PyOdbDesignLib/
-COPY --from=build /src/OdbDesign/PyOdbDesignLib/PyOdbDesignLib.py /PyOdbDesignServer/PyOdbDesignLib/
-RUN touch /PyOdbDesignServer/PyOdbDesignLib/__init__.py
+# # copy PyOdbDesignLib files
+# COPY --from=build /src/OdbDesign/out/build/python-linux-release/OdbDesignLib/_PyOdbDesignLib.so /PyOdbDesignServer/PyOdbDesignLib/
+# COPY --from=build /src/OdbDesign/PyOdbDesignLib/PyOdbDesignLib.py /PyOdbDesignServer/PyOdbDesignLib/
+# RUN touch /PyOdbDesignServer/PyOdbDesignLib/__init__.py
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \       
-        python3-dev \
-        python3-pip
+# RUN apt-get update && \
+#     apt-get install -y --no-install-recommends \       
+#         python3-dev \
+#         python3-pip
 
-WORKDIR /PyOdbDesignServer
-RUN python3 -m pip install -r requirements.txt --break-system-packages
+# WORKDIR /PyOdbDesignServer
+# RUN python3 -m pip install -r requirements.txt --break-system-packages
 
-# run
-WORKDIR /PyOdbDesignServer
-EXPOSE 8000
-CMD ["gunicorn", "--bind", ":8000", "--workers", "3", "PyOdbDesignServer.wsgi:application"]
+# # run
+# WORKDIR /PyOdbDesignServer
+# EXPOSE 8000
+# CMD ["gunicorn", "--bind", ":8000", "--workers", "3", "PyOdbDesignServer.wsgi:application"]
