--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -221,44 +221,65 @@ jobs:
           mv ${{ github.workspace }}/artifacts/windows-2022-artifacts/artifacts-windows-2022.zip ${{ github.workspace }}/artifacts/OdbDesign-Windows-x64.zip
           mv ${{ github.workspace }}/artifacts/macos-12-artifacts/artifacts-macos-12.zip ${{ github.workspace }}/artifacts/OdbDesign-MacOS-x64.zip
 
+      - name: Sign Binaries
+        run: |
+          # sha256
+          cd ${{ github.workspace }}/artifacts
+          sha256sum OdbDesign-Linux-x64.zip > OdbDesign-Linux-x64.zip.sha256sum
+          sha256sum OdbDesign-Windows-x64.zip > OdbDesign-Windows-x64.zip.sha256sum
+          sha256sum OdbDesign-MacOS-x64.zip > OdbDesign-MacOS-x64.zip.sha256sum          
+          # gpg
+          # # copy private key from variable onto disk
+          # echo "${{ secrets.GPG_PRIVATE_KEY }}" > ${{ github.workspace }}/artifacts/gpg-private-key.asc
+          # # gpg key
+          # gpg --import ${{ github.workspace }}/artifacts/gpg-private-key.asc
+          # rm ${{ github.workspace }}/artifacts/gpg-private-key.asc
+          # # sign
+          # gpg --batch --yes --detach-sign --armor ${{ github.workspace }}/artifacts/sha256sum.txt
+
       # create a release
       - name: "Create GitHub Release"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6.4.1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           script: |
-            try {             
-                const createResponse = await github.rest.repos.createRelease({
-                generate_release_notes: true,
-                name: process.env.RELEASE_NAME,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                tag_name: process.env.RELEASE_TAG,
-                body: require('fs').readFileSync('${{ github.workspace }}/release/release-body.md', 'utf8'),
-                target_commitish: '${{ github.ref_name }}'
+            try {       
+              const createResponse = await github.rest.repos.createRelease({
+                  generate_release_notes: true,
+                  name: process.env.RELEASE_NAME,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  tag_name: process.env.RELEASE_TAG,
+                  body: require('fs').readFileSync('${{ github.workspace }}/release/release-body.md', 'utf8'),
+                  target_commitish: '${{ github.ref_name }}'
               });
           
-              const filenames = [ 
-                  'OdbDesign-Linux-x64.zip',
-                  'OdbDesign-Windows-x64.zip',
-                  'OdbDesign-MacOS-x64.zip'
+              const files =
+              [ 
+                  { name: 'OdbDesign-Linux-x64.zip',  contentType: 'application/zip' },
+                  { name: 'OdbDesign-Linux-x64.zip.sha256sum', contentType: 'text/plain' },
+                  { name: 'OdbDesign-Windows-x64.zip', contentType: 'application/zip' },
+                  { name: 'OdbDesign-Windows-x64.zip.sha256sum', contentType: 'text/plain' },
+                  { name: 'OdbDesign-MacOS-x64.zip', contentType: 'application/zip' },
+                  { name: 'OdbDesign-MacOS-x64.zip.sha256sum', contentType: 'text/plain' }      
               ];
+          
+              const artifactsPath = '${{ github.workspace }}/artifacts';
               
-              for (const filename of filenames) {                  
-                  const artifactsPath = '${{ github.workspace }}/artifacts';
-                  const filePath = artifactsPath +'/' + filename;
+              for (const file of files) {                        
+                  const filePath = artifactsPath +'/' + file.name;
                   const uploadResponse = await github.rest.repos.uploadReleaseAsset({
                       owner: context.repo.owner,
                       repo: context.repo.repo,
                       release_id: createResponse.data.id,        
-                      name: filename,            
+                      name: file.name,            
                       data: require('fs').readFileSync(filePath),
                       headers: {
-                      'content-type': 'application/zip',
-                      'content-length': require('fs').statSync(filePath).size
+                          'content-type': file.contentType,
+                          'content-length': require('fs').statSync(filePath).size
                       }    
                   });
               }
             } catch (error) {
                 core.setFailed(error.message);
-            }               
+            }           
