--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -204,7 +204,34 @@ jobs:
       - name: "Download artifacts"
         uses: "actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a" # v3.0.2
         with:
-          path: ${{ github.workspace }}/artifacts
+          path: ${{ github.workspace }}/artifacts     
+
+      - name: Rename Artifacts
+        run: |
+          mv ${{ github.workspace }}/artifacts/ubuntu-22.04-artifacts/artifacts-ubuntu-22.04.zip ${{ github.workspace }}/artifacts/OdbDesign-Linux-x64.zip
+          mv ${{ github.workspace }}/artifacts/windows-2022-artifacts/artifacts-windows-2022.zip ${{ github.workspace }}/artifacts/OdbDesign-Windows-x64.zip
+          mv ${{ github.workspace }}/artifacts/macos-12-artifacts/artifacts-macos-12.zip ${{ github.workspace }}/artifacts/OdbDesign-MacOS-x64.zip
+
+      - name: Generate SHA256 Sums
+        run: |
+          # sha256
+          cd ${{ github.workspace }}/artifacts
+          sha256sum OdbDesign-Linux-x64.zip > OdbDesign-Linux-x64.zip.sha256sum
+          sha256sum OdbDesign-Windows-x64.zip > OdbDesign-Windows-x64.zip.sha256sum
+          sha256sum OdbDesign-MacOS-x64.zip > OdbDesign-MacOS-x64.zip.sha256sum          
+
+      - name: Import GPG Key
+        uses: crazy-max/ghaction-import-gpg@v4        
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          
+      - name: Sign Binaries
+        run: |
+          cd ${{ github.workspace }}/artifacts
+          gpg --batch --yes --detach-sign --armor OdbDesign-Linux-x64.zip
+          gpg --batch --yes --detach-sign --armor OdbDesign-Windows-x64.zip
+          gpg --batch --yes --detach-sign --armor OdbDesign-MacOS-x64.zip
 
       - name: Create Release Variables
         run: |
@@ -214,28 +241,6 @@ jobs:
           echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
           export RELEASE_NAME="OdbDesign ${RELEASE_TAG}"
           echo "RELEASE_NAME=$RELEASE_NAME" >> $GITHUB_ENV
-
-      - name: Rename Artifacts
-        run: |
-          mv ${{ github.workspace }}/artifacts/ubuntu-22.04-artifacts/artifacts-ubuntu-22.04.zip ${{ github.workspace }}/artifacts/OdbDesign-Linux-x64.zip
-          mv ${{ github.workspace }}/artifacts/windows-2022-artifacts/artifacts-windows-2022.zip ${{ github.workspace }}/artifacts/OdbDesign-Windows-x64.zip
-          mv ${{ github.workspace }}/artifacts/macos-12-artifacts/artifacts-macos-12.zip ${{ github.workspace }}/artifacts/OdbDesign-MacOS-x64.zip
-
-      - name: Sign Binaries
-        run: |
-          # sha256
-          cd ${{ github.workspace }}/artifacts
-          sha256sum OdbDesign-Linux-x64.zip > OdbDesign-Linux-x64.zip.sha256sum
-          sha256sum OdbDesign-Windows-x64.zip > OdbDesign-Windows-x64.zip.sha256sum
-          sha256sum OdbDesign-MacOS-x64.zip > OdbDesign-MacOS-x64.zip.sha256sum          
-          # gpg
-          # # copy private key from variable onto disk
-          # echo "${{ secrets.GPG_PRIVATE_KEY }}" > ${{ github.workspace }}/artifacts/gpg-private-key.asc
-          # # gpg key
-          # gpg --import ${{ github.workspace }}/artifacts/gpg-private-key.asc
-          # rm ${{ github.workspace }}/artifacts/gpg-private-key.asc
-          # # sign
-          # gpg --batch --yes --detach-sign --armor ${{ github.workspace }}/artifacts/sha256sum.txt
 
       # create a release
       - name: "Create GitHub Release"
@@ -258,10 +263,13 @@ jobs:
               [ 
                   { name: 'OdbDesign-Linux-x64.zip',  contentType: 'application/zip' },
                   { name: 'OdbDesign-Linux-x64.zip.sha256sum', contentType: 'text/plain' },
+                  { name: 'OdbDesign-Linux-x64.zip.asc', contentType: 'text/plain' },
                   { name: 'OdbDesign-Windows-x64.zip', contentType: 'application/zip' },
                   { name: 'OdbDesign-Windows-x64.zip.sha256sum', contentType: 'text/plain' },
+                  { name: 'OdbDesign-Windows-x64.zip.asc', contentType: 'text/plain' },
                   { name: 'OdbDesign-MacOS-x64.zip', contentType: 'application/zip' },
-                  { name: 'OdbDesign-MacOS-x64.zip.sha256sum', contentType: 'text/plain' }      
+                  { name: 'OdbDesign-MacOS-x64.zip.sha256sum', contentType: 'text/plain' },
+                  { name: 'OdbDesign-MacOS-x64.zip.asc', contentType: 'text/plain' }       
               ];
           
               const artifactsPath = '${{ github.workspace }}/artifacts';
@@ -282,4 +290,4 @@ jobs:
               }
             } catch (error) {
                 core.setFailed(error.message);
-            }           
+            }         
