--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,13 +41,16 @@ jobs:
       - name: Add Problem Matchers
         uses: ammaraskar/gcc-problem-matcher@d1fed1fac9e94d30e23b5a82dba4e2963e71d2e7 # master
 
-      # Install the cosign tool except on PR
-      # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
-        # with:
-        #   cosign-release: 'v1.13.1'
+      # # Install the cosign tool except on PR
+      # # https://github.com/sigstore/cosign-installer
+      # - name: Install cosign
+      #   if: github.event_name != 'pull_request'
+      #   uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
+      #   # with:
+      #   #   cosign-release: 'v1.13.1'
+
+      - name: cosign-installer
+        uses: sigstore/cosign-installer@v3.1.2  
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
