--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -50,6 +50,7 @@ jobs:
       #   #   cosign-release: 'v1.13.1'
 
       - name: cosign-installer
+        if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3.1.2  
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
