--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,9 +3,9 @@ name: CMake Build Multi-Platform
 
 on:
   push:
-    branches: [ "development", "main", "release" ]
+    branches: [ "development", "main", "release", "nam20485" ]
   pull_request:
-    branches: [ "development", "main", "release" ]  
+    branches: [ "development", "main", "release", "nam20485" ]  
 
 permissions:
   contents: read  
