--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -7,9 +7,9 @@ name: Docker Scout Scan
 
 on:
   push:
-    branches: [ "development", "main", "release" ]
+    branches: [ "development", "main", "release", "nam20485" ]
   pull_request:
-    branches: [ "development", "main", "release" ]
+    branches: [ "development", "main", "release", "nam20485" ]
    
 env:
   # Use docker.io for Docker Hub if empty
