--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -144,9 +144,7 @@ jobs:
 
     - name: CMake Test
       id: cmake-test      
-      run: | 
-        cd ./out/build/${{matrix.preset}}/OdbDesignTests
-        ctest -V -O testlog.txt --output-junit testlog.xml
+      run: ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log testlog.txt --output-junit testlog.xml -V
       # let the report step fail the job if it finds failed tests
       continue-on-error: true
 
@@ -156,7 +154,7 @@ jobs:
       if: ${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure'      
       with:
         name: ${{ matrix.os }}_test-results
-        path: ./out/build/${{matrix.preset}}/OdbDesignTests/testlog.xml
+        path: testlog.xml
         reporter: java-junit
         fail-on-error: true
 
