--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -154,7 +154,7 @@ jobs:
       if: ${{steps.cmake-test.outcome}} == 'success' || ${{steps.cmake-test.outcome}} == 'failure'      
       with:
         name: ${{ matrix.os }}_test-results
-        path: testlog.xml
+        path: ./out/build/${{matrix.preset}}/OdbDesignTests/testlog.xml
         reporter: java-junit
         fail-on-error: true
 
