move test fixture classes into a fixtures folder

--- a/OdbDesignTests/CMakeLists.txt
+++ b/OdbDesignTests/CMakeLists.txt
@@ -4,10 +4,10 @@
 enable_testing()
 
 add_executable(OdbDesignTests
-  OdbDesignTests.h
- "FileArchiveLoadFixture.h" "FileArchiveLoadFixture.cpp"
-  "FileArchiveLoadTests.cpp"
- "TestTests.cpp")
+    "Fixtures/FileArchiveLoadFixture.h" 
+    "Fixtures/FileArchiveLoadFixture.cpp" 
+    "FileArchiveLoadTests.cpp"
+    "TestTests.cpp" "DesignLoadTests.cpp" "Fixtures/DesignNameValueParamTest.h" "DesignNameTests.cpp" "FileArchiveLoadTests_Local.cpp")
 
 target_link_libraries(OdbDesignTests PRIVATE GTest::gtest_main)
 
