--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ testlog.txt.tmp*
 testlog.xml
 /OdbDesignTests/FileArchiveLoadTests_Local.cpp
 /OdbDesignTests/DesignNameTests.cpp
+/OdbDesignTests/CMakeLists_Local.txt
