add ccache to cmake to cache and speed up compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CXX_STANDARD ${MY_CXX_STANDARD})
 set(CMAKE_CXX_STANDARD ${MY_CXX_STANDARD})
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_EXE}")
+
 # required for SWIG python wrapper
 #set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
