--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,10 @@ set(CXX_STANDARD ${MY_CXX_STANDARD})
 set(CMAKE_CXX_STANDARD ${MY_CXX_STANDARD})
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_EXE}")
+# only use ccache locally, i.e. not in CI
+if (NOT DEFINED ENV{CI})
+    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_EXE}")
+endif()
 
 # required for SWIG python wrapper
 #set(CMAKE_POSITION_INDEPENDENT_CODE ON)
