--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ OdbDesignServer/PyOdbDesignLib/__pycache__/
 OdbDesignServer/PyOdbDesignLib/PyOdbDesignLib.py
 OdbDesignServer/db.sqlite3
 OdbDesignServer/PyOdbDesignLib/_PyOdbDesignLib.pyd
+/TEST_DATA.zip
