--- a/OdbDesignServer/CMakeLists.txt
+++ b/OdbDesignServer/CMakeLists.txt
@@ -7,5 +7,22 @@ add_executable(OdbDesignServer "main.cpp"   "Controllers/HelloWorldController.h"
 file (GLOB_RECURSE ODBDESIGN_SERVER_HEADER_FILES "*.h")
 target_precompile_headers(OdbDesignServer PRIVATE ${ODBDESIGN_SERVER_HEADER_FILES})
 
+# link to zlib (required for Crow HTTP compression)
+find_package(ZLIB REQUIRED)
+target_link_libraries(OdbDesign PRIVATE ZLIB::ZLIB)
+
+# link to Crow
+find_package(Crow CONFIG REQUIRED)
+target_link_libraries(OdbDesignServer PRIVATE Crow::Crow)
+
+# link to Oatpp
+find_package(oatpp          1.3.0 REQUIRED)
+find_package(oatpp-swagger  1.3.0 REQUIRED)
+find_package(oatpp-zlib		1.3.0 REQUIRED)
+
+target_link_libraries(OdbDesignServer PRIVATE oatpp::oatpp)
+target_link_libraries(OdbDesignServer PRIVATE oatpp::oatpp-swagger)
+target_link_libraries(OdbDesignServer PRIVATE oatpp::oatpp-zlib)
+
 # link to OdbDesign library
 target_link_libraries(OdbDesignServer PRIVATE OdbDesign)
