make ClusterIP service type explicit, but commented out

--- a/deploy/kube/OdbDesignServer/service.yaml
+++ b/deploy/kube/OdbDesignServer/service.yaml
@@ -17,6 +17,7 @@ spec:
   #     nodePort: 30888
   #     name: ods-svc-port
   ## ClusterIP/regular ingress-style access
+  # type: ClusterIP
   ports:
     - port: 80
       name: ods-svc-port
