reduce resource requests to allow scheduling of new pod in rolling update to succeed

--- a/deploy/kube/OdbDesignServer/deployment.yaml
+++ b/deploy/kube/OdbDesignServer/deployment.yaml
@@ -43,8 +43,8 @@ spec:
               cpu: "1"
               memory: 1Gi
             requests:
-              cpu: "1"
-              memory: 1Gi
+              cpu: 500m
+              memory: 500Mi
           livenessProbe:
             httpGet:
               path: /healthz/live
