--- a/deploy/kube/OdbDesignServer-SwaggerUI/deployment.yaml
+++ b/deploy/kube/OdbDesignServer-SwaggerUI/deployment.yaml
@@ -32,6 +32,6 @@ spec:
               cpu: "1"
               memory: 1Gi
             requests:
-              cpu: "1"
-              memory: 1Gi                 
+              cpu: 500m
+              memory: 500Mi                 
             
